Updates #13445 - Added CSS rules and HTML structure to avoid extra spacing.
git-svn-id: https://central.tri.be/svn/premium-plugins/code/events/branches/2.0@945 75e66736-2afa-4fbe-8bd5-dce959cd71f9

--- a/resources/events.css
+++ b/resources/events.css
@@ -485,6 +485,7 @@ h4 .tribe-view-all-events {
 
 .updated-info {
 	text-indent: -9999px;
+	height: 0;
 }
 
 /* 2011 needs more calendar room */
